[package]
name = "my_rust_pkg"
version = "0.0.1"
authors = ["konst <konst@todo.todo>"]
edition = "2021"

[[bin]]
name = "my_rust_pkg"
path = "src/main.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "0.6"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
