[package]
name = "my_rust_pkg"
version = "0.0.1"
authors = ["konst <konst@todo.todo>"]
edition = "2021"

[[bin]]
name = "my_rust_pkg"
path = "src/main.rs"

[[bin]]
name = "rust_news_station"
path = "src/rust_news_station.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "0.7"
example_interfaces = "*"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
