[package]
name = "my_rust_pkg"
version = "0.0.1"
authors = ["konst <konst@todo.todo>"]
edition = "2021"

[[bin]]
name = "my_rust_pkg"
path = "src/main.rs"

[[bin]]
name = "rust_news_station"
path = "src/rust_news_station.rs"

[[bin]]
name = "rust_news_subscriber"
path = "src/rust_news_subscriber.rs"

[[bin]]
name = "add_two_ints_serv"
path = "src/add_two_ints_serv.rs"

[[bin]]
name = "add_two_ints_client_no_opp"
path = "src/add_two_ints_client_no_opp.rs"

[[bin]]
name = "add_two_ints_client"
path = "src/add_two_ints_client.rs"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
rclrs = "0.7"
example_interfaces = "*"

# This specific version is compatible with Rust 1.75
backtrace = "=0.3.74"
